Port RetexturedModel to Porting Lib 1.21 and Fabric render data